Fix default style menu bugs
Fix Default style: Text not visible on menu levels greater than 2
Fix Top Menu div appears with empty content

--- a/css/base.css
+++ b/css/base.css
@@ -2,11 +2,11 @@
 html, body  { height: 100%; min-height: 100%; margin: 0; padding: 0; }
 
 .clearfix:after  { clear: both; content: "."; display: block; height: 0; line-height: 0; visibility: hidden; }
-.clearfix  { display: inline-block; }
-html[xmlns] .clearfix  { display: block; }
-* html .clearfix  { height: 1%; }
 
 p  { line-height: 1.5; margin: 0 0 1.25em; padding: 0; }
+
+/* HTML5 Tags for Older Browsers */
+nav, header, footer { display: block; }
 
 /* Hyperlinks */
 a img  { border: none; }
@@ -39,6 +39,11 @@ th, td  { padding: 5px; }
 .xoxo  { padding: 0; }
 
 /* Structure */
+.wrap {
+  min-height: 100%;
+  width: 1000px;
+}
+
 #wrapper				{ min-height: 100%; position: relative; padding: 20px 0; }
 #main					{ padding: 10px 10px 0; }
 
