--- a/css/styles/default.css
+++ b/css/styles/default.css
@@ -103,7 +103,7 @@ label.error				{ border: 1px solid #D8000C; color: #D8000C; background: #FFBABA;
 #nav .sf-menu ul li  { border: 1px solid #474331; margin-top: 0; }
 #nav .sf-menu a:hover, #nav .sf-menu li:hover, #nav .sf-menu li.sfHover, #nav .sf-menu ul li  { background: #373331; color: #FFF; }
 #nav .sf-menu ul a:hover, #nav .sf-menu ul li.sfHover, #nav .sf-menu ul li:hover { color: #373331; background: #FFF; }
-#nav .sf-menu ul li.sfHover a.sf-with-ul { color: #373331; }
+#nav .sf-menu ul li.sfHover a.sf-with-ul { color: #aaa; }
 #nav .sf-menu li li a  { padding: 7px 10px; line-height: 1; height: auto; font-size: 12px; }
 #nav .sf-menu .sf-with-ul  { padding-right: 15px; }
 #nav .sf-sub-indicator  { background: url(../../images/dropdown.png) no-repeat; width: 5px; height: 5px; text-indent: -9999px; display: inline-block; position: relative; left: 7px; top: 0; vertical-align: middle; }
@@ -165,7 +165,7 @@ label.error				{ border: 1px solid #D8000C; color: #D8000C; background: #FFBABA;
 /* tapestries */
 .entry-thumbnails-link { background: #111; text-decoration: none !important; }
 
-.posts-default .entry  { margin: 0 15px 10px 0; font-size: 12px; }
+.posts-default .entry  { margin: 0 10px 10px 0; font-size: 12px; }
 .posts-default img		{ background: #111; }
 .posts-default .entry-title	{ font-weight: 700; font-size: 14px;  }
 .posts-default .entry-summary, .posts-quick .entry-summary	{ color: #333; }
